# GOIT-GGIT-qc

./: .gitignore  CLAUDE.md  Pipelines-QC-notes.md  README.md  RELEASE-CHECKLIST.md  pyproject.toml
gem-tracker-constants/: .gitignore  README.md  pyproject.toml
notebooks/: Estimate_Length.ipynb  Europe-Gas_LNG-Terminals-Summary-Sheets.ipynb  Europe-Gas_Pipeline-Summary-Sheets.ipynb  GEM East African Crude Oil Pipeline (EACOP) 2023-05-19.dbf  GEM East African Crude Oil Pipeline (EACOP) 2023-05-19.shp  GEM East African Crude Oil Pipeline (EACOP) 2023-05-19.shx  GEM Italy gas pipelines 2023-06-05.dbf  GEM Italy gas pipelines 2023-06-05.shp  GEM Italy gas pipelines 2023-06-05.shx  GEM-GGIT-Gas-Pipelines-2023-12-06.shp  GEM-GGIT-Gas-Pipelines-2024-01-05.shx  GEM-GGIT-Gas-Pipelines-2024-02-01.shx  GEM-GGIT-LNG-Terminals-2023-10-24.gpkg  GEM-GGIT-LNG-Terminals-2023-12-06.gpkg  GEM-GGIT-LNG-Terminals-2023-12-13.gpkg  GEM-GGIT-LNG-Terminals-2023-12-14.gpkg  GEM-GGIT-LNG-Terminals-2023-12-18.gpkg  GEM-GGIT-LNG-Terminals-2024-01-05.gpkg  GEM-GGIT-LNG-Terminals-2024-02-01.gpkg  GEM-GGIT-LNG-Terminals-2024-02-03.gpkg  GEM-GGIT-LNG-Terminals-2024-02-12.gpkg  GEM-GGIT-LNG-Terminals-2024-02-13.gpkg  GEM-GGIT-LNG-Terminals-2024-03-04.gpkg  GEM-GGIT-LNG-Terminals-2024-05-10.gpkg  GEM-GGIT-LNG-Terminals-dataset-2023-06-02.shp  GEM-GGIT-LNG-Terminals-dataset-2023-12-13.shx  GEM-GGIT-LNG-Terminals-dataset-2023-12-18.shp  GEM-GGIT-LNG-Terminals-dataset-2024-02-01.shp  GEM-GGIT-LNG-Terminals-dataset-2024-02-01.shx  GEM-GGIT-LNG-Terminals-dataset-2024-02-12.shp  (+63 more)
notes/: QC-notes.txt
(+194 files in other folders)
