[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gem-tracker-constants"
version = "0.1.0"
description = "Canonical fuel buckets and status orderings for GEM GOIT/GGIT tracker workflows."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Baird Langenbrunner" }]
license = { text = "MIT" }
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/bairdlangenbrunner/gem-tracker-constants"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gem_tracker_constants = ["data/*.yaml"]
